fixup! fix upgrade to spring boot 4